libs/extractor/src/snapshots/extractor__tests__member_expression_style.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\nlet colors = { primary: \"blue\", secondary: \"red\" };\nlet key = \"primary\";\n<Box bg={colors[key]} />\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "colors[key]",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\nlet colors = {\n\tprimary: \"blue\",\n\tsecondary: \"red\"\n};\nlet key = \"primary\";\n<div className=\"OHaxy3jkx22wy_088z\" style={{ \"---SUimport_s_x7b__x42_ox_x7d__sfrom_s_x27__x40_devup_dui_lcore_x27__xa_let_scolors_s_x3d__s_x7b__sprimary_n_s_qblue_q_m_ssecondary_n_s_qred_q_s_x7d__x3b__xa_let_skey_s_x3d__s_qprimary_q_x3b__xa__x3c__x42_ox_sbg_x3d__x7b_colors_x5b_key_x5d__x7d__s_l_x3e__xa_-cq\": colors[key] }} />;\n",
}
